--- a/MCM2021 LaTeX paper/MCM2021 LaTeX paper.tex
+++ b/MCM2021 LaTeX paper/MCM2021 LaTeX paper.tex
@@ -141,13 +141,17 @@ Moore et al. (2015), Edelstein (1983), Moorhead et al. (2006), Parnas (1974), an
 \frac{dC}{dt} = \frac{KBC}{K_{e}+C}
 \end{equation}
 
-Where \textbf{******************}. Schimel et al. (2003) and Moorhead et al. (2006) assert that decomposition levels off at a maximum rate proportional to the concentration of enzymes acting on it \cite{Schimel2003, Moorhead2006}. To determine this enzyme concentration, we will make the assumption that enzyme concentration is proportional to the concentration of biomass in our system represented by $r$ multiplied by two environmental limiting factors in $K=rS_{M}S_{T}$ \cite{Schimel2003}. This environmental factors are discussed at greater length in \textbf{section that they're discussed}
+Where \textbf{******************}. Schimel et al. (2003) and Moorhead et al. (2006) assert that decomposition levels off at a maximum rate proportional to the concentration of enzymes acting on it \cite{Schimel2003, Moorhead2006}. To determine this enzyme concentration, we will make the assumption that enzyme concentration is proportional to the concentration of biomass in our system represented by $r$ multiplied by two environmental limiting factors in $K=rS_{M}S_{T}$ \cite{Schimel2003}. This environmental factors are discussed at greater length in \ref{Other Responses to Temperature and Water Potential}
 
 \subsection{Enzyme interactions}
 
 Enzymes produced by fungi are expelled into the surrounding substrate to autonomously break down macromolecules. Relative enzyme concentrations can be quantified by the production rates of each enzyme by a fungus. Production of enzymes is a metabolically taxing process, therefore fungi that produce enzymes which return much more usable energy and C than was put into making the enzyme, a high "return on investment", will be able to synthesize even more enzymes and grow rapidly \cite{Schimel2003}. Lustenhouwer et al (2020) strengthens this theory by showing through statistical analysis of 1582 various fungal isolats that fungi containing larger proportions of enzymes like acid phosphatase, which are associated with slow lignin decomposition, are demonstrated to strongly correlate with slower decomposition rates \cite{Lustenhouwer2020}. Lignin exemplifies a low return on investment, requiring powerful enzymes and greater energy input per unit C than holocellulose. But it's ultimately the fungi that have a subset of enzymes that best match their surrounding substrate which successfully grow and establish a niche. As an example, in a substrate of 70\%+ lignin, the slower growing fungi with lignin enzymes normally at a disadvantage will win out over other fungi competing for a fraction of available holocellulose.
 
-Communities with similar fungi of similar enzymatic makeup often see a few dominant species overwhelm the rest through competition for similar resources in the substrate, but communities of fungi with greatly differing enzymes will instead form distinct niches that partition different resources in which they are seperately able to grow. In these conditions, one dominant species faces difficulty in wiping out competitors who are individually masters of their own substrates. This effect is known as niche complementarity \cite{Toljander2006}. Research by Toljander et al. (2006) contends that environmental fluctuations further robustify a diverse community as faster growing highly competitive fungi are hindered by conditions that lapse out of their moisture and temperature niche, and slower growing stress-tolerant fungi benefit from decreased pressure by competitors. The resulting dampened and stable diverse community will decompose the most efficiently across a range of conditions \cite{Toljander2006}.
+Communities with similar fungi of similar enzymatic makeup often see a few dominant species overwhelm the rest through competition for similar resources in the substrate, but communities of fungi with greatly differing enzymes will instead form distinct niches that partition different resources in which they are seperately able to grow. In these conditions, one dominant species faces difficulty in wiping out competitors who are individually masters of their own substrates. This effect is known as niche complementarity \cite{Toljander2006}. 
+
+Research by Toljander et al. (2006) contends that environmental fluctuations further robustify a diverse community as faster growing highly competitive fungi are hindered by conditions that lapse out of their moisture niche, and slower growing stress-tolerant fungi benefit from decreased pressure by competitors. A linear regression for the moisture niche width ($W_{mn}$) vs competitive ranking ($R_c$) across 34 different fungal species studied in Maynard et al. (2019) gives $W_{mn}= 1.84R_c + 2.9$, with an $R^2$ value of 0.227. Although the $R^2$ value of this regression is not particularly strong, an underlying negatively proportional relationship of the general data set is indicated. Maynard et al. (2019) provides backing for this niche distinction by applying principal component analysis to a variety of potential fungal niche-associated traits. The results of this analysis points towards a similar direction: fungal species will lean towards one of these two profiles \cite{Maynard2019}. 
+
+A diverse subset fungal niches will result in a dampened and stable community will decompose the most efficiently across a range of conditions. \cite{Toljander2006}. This conclusion has signicant implications on the continuation of carbon cycling in ecosystems, as decomposers releasing carbon into the soil and atmosphere sustain a critical role in the cycle \cite{Lustenhouwer2020}
 
 \section{Model Formulation}
 
@@ -194,7 +198,7 @@ The total decomposition rate is then given by the sum of all rates over the vari
 \begin{equation} \label{eq}
 \frac{dC_{tot}}{dt} = \sum_{i=1}^{n}\frac{dC_{i}}{dt}
 \end{equation}
-Where $n$ is the total number of fungi being simulated. \textbf{address the fact that all the 35 fungi will be growing/decomposing together at the same time}
+Where $n$ is the total number of fungi being simulated. Our model simulates a system in which all 35 fungi are growing and decomposing at the same time and interacting through competition for a limited nutrient supply.
 
 \subsection{Estimating $\nu$ For Various Environments}
 
@@ -259,24 +263,18 @@ Although water potentials can be approximated based on predictive models, the me
 Note that these are not wholly representative configurations, but rather examples to provide insight into how fungal species with specific traits may respond in discrete and distinct conditions likely to exist. We can then find $\nu$ using experimental data from Maynard et al 2019 \cite{Maynard2019}.\textbf{talk about continuous data technique thingy in the extra methods info sheet}
 
 \begin{multicols}{2}	
-\subsection{Other Responses to Temperature and Water Potential}
+\subsection{Other Responses to Temperature and Water Potential}\label{Other Responses to Temperature and Water Potential}
 
 Our growth model takes into account temperature (T) and water potential ($\psi$) in two more parameters: the soil temperature coefficient ($S_T$) and the soil temperature coefficient ($S_M$). Moorhead et al. (1991) provides a simple relationship between $S_T$ and T using the rate of increase (Q):
 \begin{equation}
 \log_{10}(S_T) = \frac{T-25}{10}\log_{10}(Q)
 \end{equation}
-Although this equation does not take into account specific fungal response to temperature change, more recent evidence supports that this relationship is not direct, with most of the direct impact coming from moisture \cite{Petraglia2018}. As the ratio of rates of decomposition given a temperature change, Q as a parameter should represent the effective output of various mechanisms influenced by temperature rather than focusing on specific mechanisms. However, for the sake of simplicity, Q has been set standard constant to a value of 2.5 \cite{Moorhead1991}.
+Although this equation does not take into account specific fungal response to temperature change, more recent evidence supports that this relationship is not direct, with most of the direct impact coming from moisture \cite{Petraglia2019}. As the ratio of rates of decomposition given a temperature change, Q as a parameter should represent the effective output of various mechanisms influenced by temperature rather than focusing on specific mechanisms. However, for the sake of simplicity, Q has been set standard constant to a value of 2.5 \cite{Moorhead1991}.
 
 Water potential also relates to a constant, $S_M$, in a simple equation described in Moorhead et al. (1991) using $\alpha_2$ and $\lambda$:
 \begin{equation}
 S_M = \alpha_2 -\lambda \log_{10}(-\psi)
 \end{equation}
-
-These two parameters help calculate the maximum growth rate by the relationship:
-\begin{equation}
-\beta = S_T S_M r
-\end{equation}
-\textbf{why is this $\beta$ and not K?} 
 
 \subsection{Assumptions}
 
@@ -367,7 +365,26 @@ Overall, including the nutrient availability term in the growth equation capture
 
 \section{Analysis}
 
-\subsection{Distribution of relative concentration of fungi}
+%This corroborates with various literature that finds soil moisture as a particularly influential environmental factor, influencing elongation through pressure gradients and testing of tolerance \cite{Maynard2019} \cite{Lustenhouwer2019}. %i think there may be a better citation, i am tired
+%****In case linear regression added: The tropical rain forest environment, with a water potential of 0.76, lead to a }
+
+\subsection{Total Carbon vs Time for Specific Environments} %direct_compare_decom_environmen.fig
+A sampling of different environmental parameters within the model was taken as described in section X****. The results of these model runs were taken in terms of the total grams of carbon over time. Here, we see more moist soil environments lead to clearly more expedient rates of total carbon decrease and reach complete carbon decomposition decomposition quicker in our model. The rain forest environment exceeds the other environmental profiles, effectively completing decomposition in under 1640 days (roughly 4.5 years. On this time scale of roughly 5 years individual biomes will exhibit negligible changes in environmental parameters. But biomes in a given area can change in non-negligible ways over longer time scales. We can consider these long term changes as the effective transition between different biomes and thus different overall performance, as assessed by the model. Therefore, difference in performance between different environments can be roughly equated to the change in performance under long term environmental fluctuations. 
+% FAK: tervor succy boi
+
+\subsection{$\nu$ vs Average Contribution to Substrate Decay} %avg_contr_nu_environment.fig
+Using the decomposition model, average contribution to substrate decay and the tip elongation rate $\nu$ can be found for each fungal species for a given environmental configuration. 
+
+The contribution of a particular fungi over time is taken to be the absolute value of the decrease in total carbon caused by all enzymes of the specific fungi in question divided by the total initial carbon of the substraight. As described in the model formulation, these decreases are calculated independently and summed together to calculate the total carbon decrease. The average contribution is then calculated as $C_{avg} = \frac{ \int C_{cont} dt}{\delta t}$ where $C_{cont}$ is the contribution of the enzyme in question and $\delta t$ is the total change in time.
+
+With one set of environmental parameters, we can gain insight into how different species of fungi potentially perform relative to each other, show in figure. In addition to an expected loose positive correlation between $\nu$ and the average contribution of a given fungi, these is a lose correlation of higher fungi competitive ranking with greater $\nu$ and greater average contribution. This suggests that the fungi that are more 'active' in our model, with the largest performance dependence on $\nu$, are also the most competitive. Competitive ranking has a higher correlation with $\nu$, indicating that in our model growth rate may be more sensitive to $\nu$ in competitive circumstances. This aligns with established trends of the primary 2 fungal niches \cite{Maynard2019}.
+
+Result were also viewed under 5 different sets of environmental conditions (water potential and temperature), each corresponding to a different biome, shown in figure. The results show that the correlation between $\nu$ and fungi contribution changes with environmental parameters. We find that in general, environments with a higher moisture potential lead to greater contributions overall and a greater contribution sensitivity to $\nu$ in our model. Our model agrees with the notion of water potential serving as an important limiting factor to the decomposition ability of individual fungi. These results can be interpreted as moisture potential and temperature limiting the effectiveness of faster-growing fungi.  
+
+\subsection{Short-Term Environmental Fluctuations}
+Realistically, the external environment dictates environmental conditions of the system both in short time scales (year fluctuations for example) and long time scales. Due to the time scales of our model, the effects of very fast fluctuations (due to outside forces) on the scale of days are not considered as relative changes in the model's state have negligible changes on the order of a day. Thus we define our short term fluctuations to be roughly seasonal as this dictates the majority of local environmental variability. To study the effects of these short time scale fluctuations, we choose to implement an abstracted yearly moisture cycle, specifically that of the temperate forest environment. The cycle oscillates between the average yearly maximum and minimum values of $\psi$ twice a year, creating a rough yearly pattern of $\psi$ and thus $\nu$ for a given fungi from experimental data \cite{Zobel2001}\cite{Maynard2019}. Note that this moisture model is limited in assuming one period oscillation between a maximum and a minimum yearly, neglecting the reality of oscillating between local minimum in summer and winter and locate maximums in fall and spring. To incorporate this into the model, $\nu$ and $\psi$ were dynamically allocated over time based on the oscillatory behavior shown in (figure oscillating-psi-nu). Due to time limitations and scarce data on the parameters over these yearly oscillations, only two species of fungi were simulated. A comparison of their respective decomposition contributions with that of similar environmental conditions but static $\nu$ and $\psi$ is shown in (figure oscillating2nonoscillating-psi-contribution). There is no note-worthy new oscillatory motion seen in these results. There is also seen to be a slight increase in the effectiveness of both fungi in the oscillatory case. The interpretation of this increase can be that for time scales on the order of a year, the positives affect of increasing $\nu$ is greater than that of the negative affect of decreasing $\nu$ by the same amount. This would lead us to believe that faster oscillations of $\nu$ will generally have a positive net impact on the decomposition. The frequency limits of this principle would require further investigation.
+
+\subsection*{Distribution of relative concentration of fungi}
 The model allows us to adjust the relative concentrations of each fungi species being simulated. In the model, this is represented with a set of $0<c_{i}\leq 1$ such that $\sum c_{i} = 1$. Each one of these $c_{i}$ multiplies the rates of hyphal density increase and boundary/initial conditions in the growth model. With this metric, the relative concentrations of different fungi species are forced to satisfy the conditions $B_{i}/B_{tot}=c_{i}$ where $B_{i}$ is the biomass of the '$i$'th fungi species. This is an unrealistic constraint, as the relative concentrations of different fungal species should fluctuate with time as the different species of fungi grow at varying rates. But for the purpose of assessing the effect of biodiversity on the overall decomposition of the substraight, concentration fluctuation would add unneeded complexity to the analysis. \\
 This analysis also considers the competitive rankings of the different fungi species \cite{Maynard2019}. The ranking-distribution coefficient, $a$ is then defined to be
 \begin{equation} \label{eq}
@@ -377,34 +394,33 @@ Where $R_{i}$ s the competitive ranking for the '$i$'th fungi species. The ranki
 To study the effects of $a$ on the system overall, sample $c$ values had to be chosen. Due to a lack of literature results on simple, constant fungi distributions, arbitrary Gaussian distributions spread out over the different species of fungi were chosen. Because we are mainly concerned with the relation of any given distribution to the competitive rankings, the functions can be viewed as arbitrary or random distributions (because the ordering of fungal species in our Gaussian distribution has no physical meaning). The results of model runs using these various distributions is shown in (figure carbon-decrease-fungi-distribution). To assess the overall effectiveness of a single species distribution, the average carbon decrease over the whole interval was found via the equation $C_avg = \int (C_{0}-C)dt/(\delta t)$ where $C_{0}$ is our initial amount of carbon and $\delta t$ is the total time change over which the carbon decreases. The results of comparing this average carbon decomposed to the $a$ value for the species distribution in question is seen in (figure a-competative-distribution-coef-to-avg-Clost). Several interesting qualitative behaviors arise from the this comparison. Firstly, there is a clear smooth trend between $a$ and the average carbon decomposed up to approximately $a=0.65$. At this point the smooth trend completely vanishes and the data points appear to be randomly distributed in the area. We hypothesize that this critical value of $a$ could be representative of a bifurcation point; however further analysis on the dynamics of these coupled systems interacting would need to be done to investigate this hypothesis further. Additionally we notice that at this critical point, the average carbon decomposed tends to grow significantly. The physical interpretation of this critical point is deeply related to the effectiveness of the competitive rankings as they relate to a biologically diverse system. The results show that beyond a certain point, distributing the biodiversity more closely to the competitive rankings does not have any noticeable effect on the overall effectiveness of the system. \\
 This leads to two possibilities beyond the critical point for the system. One possibility is that optimum biodiversity is based on more complex dynamics than the competitive rankings can assess. The other possibility is that the system behaves in a chaotic or random nature beyond this critical point and no clear metric of biodiversity could be correlated to the effectiveness of a given distribution.
 
-\subsection{Environmental fluctuations}
-Realistically, the external environment dictates environmental conditions of the system both in short time scales (year fluctuations for example) and long time scales. Due to the time scales of our model, the effects of very fast fluctuations (due to outside forces) on the scale of days are not considered as relative changes in the model's state have negligible changes on the order of a day. Thus we define our short term fluctuations to be roughly seasonal as this dictates the majority of local environmental variability. To study the effects of these short time scale fluctuations, we choose to implement an abstracted yearly moisture cycle, specifically that of the temperate forest environment. The cycle oscillates between the average yearly maximum and minimum values of $\psi$ twice a year, creating a rough yearly pattern of $\psi$ and thus $\nu$ for a given fungi from experimental data \cite{Zobel2001}\cite{Maynard2019}. Note that this moisture model is limited in assuming one period oscillation between a maximum and a minimum yearly, neglecting the reality of oscillating between local minimum in summer and winter and locate maximums in fall and spring. To incorporate this into the model, $\nu$ and $\psi$ were dynamically allocated over time based on the oscillatory behavior shown in (figure oscillating-psi-nu). Due to time limitations and scarce data on the parameters over these yearly oscillations, only two species of fungi were simulated. A comparison of their respective decomposition contributions with that of similar environmental conditions but static $\nu$ and $\psi$ is shown in (figure oscillating2nonoscillating-psi-contribution). There is no note-worthy new oscillatory motion seen in these results. There is also seen to be a slight increase in the effectiveness of both fungi in the oscillatory case. The interpretation of this increase can be that for time scales on the order of a year, the positives affect of increasing $\nu$ is greater than that of the negative affect of decreasing $\nu$ by the same amount. This would lead us to believe that faster oscillations of $\nu$ will generally have a positive net impact on the decomposition. The frequency limits of this principle would require further investigation. 
-
-
-\subsection{$\nu$ vs Average Contribution to Substrate Decay} %avg_contr_nu_environment.fig
-Using the decomposition model, average contribution to substrate decay and the tip elongation rate $\nu$ can be found for each fungal species for a given environmental configuration. Aside from indicating an expected positive correlation between $\nu$ and contribution, we find that in general, environments with a higher moisture potential lead to greater contributions overall and a greater contribution sensitivity to $\nu$ in our model. Our model agrees with the notion of water potential serving as an important limiting factor to the decomposition ability of individual fungi. This corroborates with various findings, that find soil moisture as a particularly influential environmental factor, influencing elongation through pressure gradients and testing of tolerance \cite{Maynard2019} \cite{Lustenhouwer2020}. %i think there may be a better citation, i am tired
-%****In case linear regression added: The tropical rain forest environment, with a water potential of 0.76, lead to a }
-
-\subsection{Total Carbon vs Time for Specific Environments} %direct_compare_decom_environmen.fig
-Similarly, a sampling of different environmental parameters within the decomposition model demonstrates the decrease of total carbon in a fungal-waste system over time. Here, we see more moist soil environments lead to clearly more expedient rates of carbon total carbon decrease and reach total decomposition quicker in our model. Again in the model, the rain forest environment exceeds the other environmental profiles, effectively completing decomposition in under 1640 days (roughly 4.5 years.
-
-\subsection{Average Contribution vs $\nu$ with Competitive Rankings} %avg_contr_nu_competative_rankings.fig  Maybe ask trevor to change colors or flip colors (final point(s) difficult to see
-With one set of environmental parameters, we can gain insight into how different species of fungi potentially interact relative to each other. In addition to an expected lose positive correlation between $\nu$ and the average contribution of a given fungi, these is a lose correlation of higher fungi competitive ranking with greater $\nu$ and greater average contribution. This suggests that the fungi that are more 'active' in our model, with the largest growth rates and proportions, are also the most competitive. Competitive ranking has a higher correlation with $/nu$, indicating that in our model growth rate may be more significant than proportion when it comes to competitive circumstances. This aligns with established trends of the primary 2 fungal niches \cite{Maynard2019}.
 
 \section{Limitations}
 \subsection{Growth Coupling}
 The coupling between our growth model and our decomposition kinetics model was scarsely found in literature. Instead, literature would in some cases adopt a simpler mechanism to describe fungi growth to match decomposition kinetics of equal complexity to our model, or would in other cases implement a more complex mechanism for fungi nutrient uptake while neglecting much of the complexity from interactions between fungi and with the larger environment. This resulted in a lack of applicable parameters from literature to choose from for our coupled model, for which we decided either to pull parameter values from simpler models described above or to empirically derive our parameters by fitting the model output to other reasonable outputs (as was done with the parameter $G$). 
 
-\subsection{Parameter Choices and Enzyme Concentration}
+\subsection{Decomposition kinetics}
 In our comparison of different methods for coupling the growth equation to the decomposition kinetics, there are some unrealistic disagreements between the early behavior of each growth model; mainly that of a slight increase in the first maximum biomass reached by the carbon limiting growth model. Expected behavior would exhibit less biomass gained over time when the nutrient level is limited. This result is likely a consequence of bad parameter choices derived with imperfect methods described above or a failure to incorporate a more realistic relationship between the decomposed carbon pool and available carbon pool from which the fungi supplement their own nutrient supply.
 
 The Michaelis-Menten dynamics we implemented often considers enzyme concentration to be proportional to the maximum rate of the reaction. Taking this concentration to be proportional to total fungal biomass in some set region of space does not account for the concentration of enzymes becoming saturated as the fungi spread farther out through space. A more realistic incorporation of this idea into the model would need to address the geometric complexities involved in examining only one region of a much larger fungi growth. Even further unpackaging of these dynamics would account for fungal growth into areas that do not have physical access to the carbon being decomposed. At this point, a simplified one-dimensional growth model would not suffice.
 
-The effect of considering biomass proportional to concentration would be seen in the longer term behavior of the model, as the fungi growth becomes limited. We may expect to see more complex dynamics transitioning between the "unbounded" fungi growth and the steady-state behavior of fungi growth. Thus, the largest area of error for our results due to this assumption is likely in the area of time transitioning unbounded growth and steady-state behavior.
+The effect of considering biomass proportional to concentration would be seen in the longer term behavior of the model, as the fungi growth becomes limited. We may expect to see more complex dynamics transitioning between the "unbounded" fungi growth and the steady-state behavior of fungi growth. Thus, the largest area of error for our results resulting from this assumption is likely in the area of time transitioning unbounded growth and steady-state behavior.
+
+Values for our parameter, $K_e$ were difficult to find in the literature, as the dynamics of the four enzymes considered were not agreed upon in literature. Additionally, cellobiohydrolase was sometimes found to follow different dynamics than the Michaelis-Menten equation \cite{Razavi2015}. To obtain a more accurate value for this parameter, a study of the model's overall sensitivity to varying $K_e$ should be conducted. A more accurate representation of fungi interactions would include a larger subset of enzymes and account for more distinctive differences in decomposition dynamics between various enzymes. But any study of alternative decomposition kinetics between enzymes was not done due to time limitations. 
 
 \subsection{Direct Interactions}
 
-It was observed in literature that there are direct interactions between fungi growing in the same environment by various mechanisms (NEED CITATION). Our model ignored the effects of these direct interactions and instead focused on indirect interactions via competition for the same nutrients source. The effects of fungi's mechanisms of sabotage via physical means is typically taken to be negligible and the dynamics of such interactions are likely too complicated to consider. However, the effect of space-limitation would likely cause there to be non-negligible limitations on fungal growth due to others obstructing their path or due to total lack of available space. Essentially, our simulation considered fungi competing for food, when in reality, they compete for food and space. In considering these effects, care must be taken to the space of consideration and the limitations of that space. Further review would need to be done to assess the limitations of various spaces, but because we are considering fungi in open ground liter without any obvious obstructions to their growth, spacial limitations on the fungi growth may be considered negligible. This assumption would not apply in the case of geometric isolation of a particular fungi but the geometric access of particular fungi to the substraight is another complexity that would need to be addressed in a higher-dimensional growth model. 
+It was discussed in literature that there are competitive direct interactions observed between fungi growing in the same environment by various mechanisms \cite{Boddy2000}. Our model ignored the effects of these direct interactions and instead focused on indirect interactions via competition for the same nutrients source. While some effects from offensive skirmishes between fungi are typically taken to be negligible by literature other than an increase in metabolic rate, the effects from competitve fungi obstructing the growth to others due to space-limitations would likely be non-negligible. Essentially, our simulation only considered fungi competing for food, when in reality, they compete for food and space. 
+
+Further review would need to be done to assess the space-limitations inherited by environments other than open ground litter which does not pose obvious obstructions to fungi growth. This assumption of negligible spacial-limitations would not apply in the case of geometric isolation of particular fungi. Moreover, geometric access by fungi to the substraight is another complexity that would need to be addressed in a higher-dimensional growth model. 
+
+\subsection{Environmental Fluctuations}
+
+The environmental conditions were analyzed for short term and long term fluctuation (short term being yearly cycles and long term being overall biome transitions over time). Our analysis found that oscillating environmental conditions showed slightly improved decomposition rates for two species of fungi, but additional studies involving a more diverse subset of species of fungi that might reveal niche complementarity were not studied due to time limitations.
+
+In this analysis, only the effects from varying $\psi$ were studied. Realistic environmental fluctuations would see both $T$ and $\psi$ fluctuating simultaneously, but for the purpose of studying the general effect of oscillating environmental conditions, this can be taken as a representative result. Future studies of the model's response to fluctuating environmental conditions could include a study of the system's response to a continuum of frequencies for environmental fluctuations, as well as studying the effects of fluctuating multiple environmental conditions simultaneously. 
+
+The correlations found between distributions of fungi species and overall performance of the system in the static environmental conditions of the Arid climate biome is poorly understood and would require further investigation or numerical fitting to be studied in more detail. The change occurring at the critical point may also be a result of numerical error in approximate solution to the differential equations being solved (although there is no other indication that this is the case). Further analysis of this correlation could include assessment of this correlation in different biomes and in oscillating environmental conditions. 
 
 
 %\begin{ColumnFigure}
@@ -440,7 +456,7 @@ Here are the model parameters for the coupled growth and decomposition model for
 				\hline
 				Hyphal death rate& $\gamma_1$ & 0.15 & $day^{-1}$ &\cite{Schnepf2008}\\
 				\hline
-				Anastomosis coefficent & $\mu$ & 0.3 & $\frac{mm}{day}$ &\cite{Lyn2016}\\ % Trevor sussed on units
+				Anastomosis coefficent & $\mu$ & 0.3 & $\frac{mm}{day}$ &\cite{Lin2016}\\ % Trevor sussed on units
 				\hline
 				Branching rate & $\alpha_1$ & 1.2372 & $day^{-1}$ &\cite{Du2019}\\
 				\hline
