--- a/MCM2021 LaTeX paper/masterbib.bib
+++ b/MCM2021 LaTeX paper/masterbib.bib
@@ -672,6 +672,17 @@ abstract = { A mathematical model that reproduces fungal proliferation and morph
 	author={Paton, Steve}, 
 	year={2019}, 
 	month={Oct}
+}
+
+@article{Davey2007,
+	title={Weather and Climate
+	Inventory, National Park Service, Sonoran Desert Network. Natural Resource
+	Technical Report NPS/SODN/NRTR—2007/044},
+	author={Davey, C. A., K. T. Redmond, and D. B. Simeral.},
+	journal={Natural Resource Technical Report},
+	year={2007},
+	volume={44},
+	pages={1-114}
 } 
 
 @inproceedings{Andren1999,
